--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
                      <a class="nav-link" href="#roadmap">Roadmap</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#partners">Partners</a>
-                  </li>
-                  <li class="nav-item">
                      <a class="nav-link" href="#contact">CONTACT US</a>
                   </li>
                </ul>
@@ -113,32 +110,6 @@
          </div>
          <div class="col-lg-4 col-sm-6">
             <div class="portfolio-item">
-               <img src="img/p4.png" alt="">
-               <a href="Project/mm.html">
-               <div class="portfolio-overlay">
-                  <div>
-                     <h3>Mentoring Mondays</h3>
-                     <h6>MORE DETAILS</h6>
-                  </div>
-               </div>
-               </a>
-            </div>
-         </div>
-         <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
-               <img src="img/p5.png" alt="">
-               <a href="Project/ctf.html">
-               <div class="portfolio-overlay">
-                  <div>
-                     <h3>3108 CTF</h3>
-                     <h6>MORE DETAILS</h6>
-                  </div>
-               </div>
-               </a>
-            </div>
-         </div>
-         <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
                <img src="img/p6.png" alt="">
                <div class="portfolio-overlay">
                   <div>
@@ -154,17 +125,6 @@
                <div class="portfolio-overlay">
                   <div>
                      <h3>Jom Belajar Hack (Beginner)</h3>
-                     <h6>COMING SOON</h6>
-                  </div>
-               </div>
-            </div>
-         </div>
-         <div class="col-lg-4 col-sm-6">
-            <div class="portfolio-item">
-               <img src="img/p8.png" alt="">
-               <div class="portfolio-overlay">
-                  <div>
-                     <h3>Fight The Phish</h3>
                      <h6>COMING SOON</h6>
                   </div>
                </div>
@@ -201,12 +161,9 @@
                      <h5 class="title-sm">2023</h5>
                      <p>Jom Belajar Hack (Intermediate)</p>
                      <p>Tech Podcast</p>
-                     <p>Jom Belajar CTF</p>
-                     <p>Mentoring Mondays</p>
                      <p>3108 CTF</p>
                      <p>Jom Belajar Python (Beginner)</p>
                      <p>Jom Belajar Hack (Beginner)</p>
-                     <p>Fight the Phish</p>
                   </div>
                </div>
                <div class="col-lg-4 col-sm-6 feature d-flex">
@@ -217,49 +174,12 @@
                      <h5 class="title-sm">2024</h5>
                      <p>Jom Belajar Hack (Intermediate)</p>
                      <p>Tech Podcast</p>
-                     <p>Jom Belajar CTF</p>
-                     <p>Mentoring Mondays</p>
-                     <p>3108 CTF</p>
                      <p>Jom Belajar Python (Beginner)</p>
                      <p>Jom Belajar Hack (Beginner)</p>
-                     <p>Fight the Phish</p>
                   </div>
                </div>
       </section>
       <!-- End Section Roadmap -->
-
-      <!-- Section Partners -->
-      <section id="partners" class="bg-light">
-      <div class="row">
-      <div class="col-12 section-intro">
-      <h1>Backed by the best</h1>
-      <div class="hline"></div>
-      </div>
-      </div>
-      <div class="container">
-      <div class="row gy-4">
-      <div class="col-lg-2 col-md-3 col-6">
-      <img src="img/logo1.svg" alt="">
-      </div>
-      <div class="col-lg-2 col-md-3 col-6">
-      <img src="img/logo2.svg" alt="">
-      </div>
-      <div class="col-lg-2 col-md-3 col-6">
-      <img src="img/logo3.svg" alt="">
-      </div>
-      <div class="col-lg-2 col-md-3 col-6">
-      <img src="img/logo4.svg" alt="">
-      </div>
-      <div class="col-lg-2 col-md-3 col-6">
-      <img src="img/logo5.svg" alt="">
-      </div>
-      <div class="col-lg-2 col-md-3 col-6">
-      <img src="img/logo6.svg" alt="">
-      </div>
-      </div>
-      </div>
-      </section>
-      <!-- End Section Partners -->
 
       <!-- Section Testimonials -->
       <section id="testimonials" class="text-center">
@@ -368,10 +288,10 @@
          <div class="container py-4">
             <div class="row justify-content-center">
                <div class="col-md-6">
-                  <h3 class="text-white">Join a fast-growing local cybersecurity community.</h3>
+                  <h3 class="text-white">Further enquiries.</h3>
                </div>
                <div class="col-auto">
-                  <a href="https://t.me/hibiscuslabcommunity" class="btn btn-light">Join Now</a>
+                  <a href="https://www.instagram.com/hibiscuslab" class="btn btn-light">Join Now</a>
                </div>
             </div>
          </div>
@@ -387,12 +307,7 @@
                      <h4 class="logo-text">Hibiscus Lab</h4>
                      <p>SSM: 003477397-W</p>
                      <div class="social-icons">
-                        <a href="https://www.facebook.com/profile.php?id=100084760095342"><i class="bx bxl-facebook"></i></a>
-                        <a href="https://twitter.com/HibiscusLab"><i class="bx bxl-twitter"></i></a>
                         <a href="https://www.instagram.com/hibiscuslab/"><i class="bx bxl-instagram"></i></a>
-                        <a href="https://t.me/hibiscuslabcommunity"><i class="bx bxl-telegram"></i></a>
-                        <a href="https://discord.gg/3aRqb9cH"><i class="bx bxl-discord"></i></a>
-                        <a href="https://www.tiktok.com/@hibiscuslab"><i class="bx bxl-tiktok"></i></a>
                         <a href="https://www.youtube.com/channel/UCO3Igu24eoh3raBoBA7laPg"><i class="bx bxl-youtube"></i></a>
                         <a href="https://github.com/Hibiscus-Lab"><i class="bx bxl-github"></i></a>
                      </div>
@@ -403,7 +318,6 @@
                         <a href="about.html">About Us</a>
                         <a href="#project">Project</a>
                         <a href="#roadmap">Roadmap</a>
-                        <a href="#partners">Partners</a>
                         <a href="#contact">Contact Us</a>
                      </div>
                   </div>
@@ -416,7 +330,6 @@
                   <div class="col-md-2">
                      <h5 class="title-sm">Reach Out</h5>
                      <div class="footer-links">
-                        <p class="mb">Visit Us: 1609, Student Resource Center, Creative Industry Development Centre Level 16, UNIKL Campus City</p>
                         <p class="mb">Send Email: <a href = "mailto: hello@biscus.my">hello@biscus.my</a></p>
                      </div>
                   </div>
