--- a/Project/intermediate.html
+++ b/Project/intermediate.html
@@ -50,9 +50,6 @@
                      <a class="nav-link" href="/roadmap">Roadmap</a>
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="/partners">Partners</a>
-                  </li>
-                  <li class="nav-item">
                      <a class="nav-link" href="/contact">CONTACT US</a>
                   </li>
                </ul>
@@ -191,12 +188,7 @@
                      <h4 class="logo-text">Hibiscus Lab</h4>
                      <p>SSM: 003477397-W</p>
                      <div class="social-icons">
-                        <a href="https://www.facebook.com/profile.php?id=100084760095342"><i class="bx bxl-facebook"></i></a>
-                        <a href="https://twitter.com/HibiscusLab"><i class="bx bxl-twitter"></i></a>
                         <a href="https://www.instagram.com/hibiscuslab/"><i class="bx bxl-instagram"></i></a>
-                        <a href="https://t.me/hibiscuslabcommunity"><i class="bx bxl-telegram"></i></a>
-                        <a href="https://discord.gg/3aRqb9cH"><i class="bx bxl-discord"></i></a>
-                        <a href="https://www.tiktok.com/@hibiscuslab"><i class="bx bxl-tiktok"></i></a>
                         <a href="https://www.youtube.com/channel/UCO3Igu24eoh3raBoBA7laPg"><i class="bx bxl-youtube"></i></a>
                         <a href="https://github.com/Hibiscus-Lab"><i class="bx bxl-github"></i></a>
                      </div>
@@ -207,20 +199,18 @@
                         <a href="about.html">About Us</a>
                         <a href="#project">Project</a>
                         <a href="#roadmap">Roadmap</a>
-                        <a href="#partners">Partners</a>
                         <a href="#contact">Contact Us</a>
                      </div>
                   </div>
                   <div class="col-md-2">
                      <h5 class="title-sm">More</h5>
                      <div class="footer-links">
-                        <a href="whistleblowing_policy.html">Whistleblowing Policy</a>
+                        <a href="img/whistleblowing_policy.pdf">Whistleblowing Policy</a>
                      </div>
                   </div>
                   <div class="col-md-2">
                      <h5 class="title-sm">Reach Out</h5>
                      <div class="footer-links">
-                        <p class="mb">Visit Us: 1609, Student Resource Center, Creative Industry Development Centre Level 16, UNIKL Campus City</p>
                         <p class="mb">Send Email: <a href = "mailto: hello@biscus.my">hello@biscus.my</a></p>
                      </div>
                   </div>
@@ -243,6 +233,6 @@
       <!-- End Footer -->
 
       <!-- Optional JavaScript; choose one of the two! -->
-      <script src="../js/bootstrap.bundle.min.js"></script>
+      <script src="js/bootstrap.bundle.min.js"></script>
    </body>
 </html>
