--- a/index.html
+++ b/index.html
@@ -288,10 +288,10 @@
          <div class="container py-4">
             <div class="row justify-content-center">
                <div class="col-md-6">
-                  <h3 class="text-white">Further enquiries.</h3>
+                  <h3 class="text-white">Further enquiries</h3>
                </div>
                <div class="col-auto">
-                  <a href="https://www.instagram.com/hibiscuslab" class="btn btn-light">Join Now</a>
+                  <a href="https://www.instagram.com/hibiscuslab" class="btn btn-light">Click Now</a>
                </div>
             </div>
          </div>
