--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
                <a href="https://www.youtube.com/channel/UCO3Igu24eoh3raBoBA7laPg">
                <div class="portfolio-overlay">
                   <div>
-                     <h3>Tech Podcast</h3>
-                     <h6>LEARN NOW</h6>
+                     <h3>What The Tech! Podcast</h3>
+                     <h6>WATCH NOW</h6>
                   </div>
                </div>
             </div>
