--- a/index.html
+++ b/index.html
@@ -178,7 +178,44 @@
                      <p>Jom Belajar Hack (Beginner)</p>
                   </div>
                </div>
+                  <div class="col-lg-4 col-sm-6 feature d-flex">
+                  <div class="icon-box me-3">
+                     <i class="material-symbols:check-circle-outline"></i>
+                  </div>
+                  <div>
+                     <h5 class="title-sm">2025</h5>
+                     <p>Jom Belajar Hack (Intermediate)</p>
+                     <p>Tech Podcast</p>
+                     <p>Jom Belajar Python (Beginner)</p>
+                     <p>Jom Belajar Hack (Beginner)</p>
+                  </div>
+               </div>
+               <div class="col-lg-4 col-sm-6 feature d-flex">
+                  <div class="icon-box me-3">
+                     <i class="material-symbols:check-circle-outline"></i>
+                  </div>
+                  <div>
+                     <h5 class="title-sm">2026</h5>
+                     <p>Jom Belajar Hack (Intermediate)</p>
+                     <p>Tech Podcast</p>
+                     <p>Jom Belajar Python (Beginner)</p>
+                     <p>Jom Belajar Hack (Beginner)</p>
+                  </div>
+               </div>
+                  <div class="col-lg-4 col-sm-6 feature d-flex">
+                  <div class="icon-box me-3">
+                     <i class="material-symbols:check-circle-outline"></i>
+                  </div>
+                  <div>
+                     <h5 class="title-sm">2027</h5>
+                     <p>Jom Belajar Hack (Intermediate)</p>
+                     <p>Tech Podcast</p>
+                     <p>Jom Belajar Python (Beginner)</p>
+                     <p>Jom Belajar Hack (Beginner)</p>
+                  </div>
+               </div>
       </section>
+               
       <!-- End Section Roadmap -->
 
       <!-- Section Testimonials -->
